# robinhood-rs

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  login.rs  req.rs
src/queries/: ticker.rs
