[package]
name = "robinhood"
version = "0.1.11"
authors = ["JunkBoy <privatejunkmailserver@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
anyhow = "1"