[package]
name = "robinhood"
version = "0.2.0"
authors = ["JunkBoy <privatejunkmailserver@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
uuid = { version = "0.6", features = ["serde", "v4"] }